crates/connector-vmm-tests/tests/snapshots/release__a_stopped_stack_is_released.snap
---
source: crates/connector-vmm-tests/tests/release.rs
expression: release(&setup)
---
status: 0
list: emptied
--- stderr
--- calls
mise run local:stop
  in <tmp>/checkout
systemctl --user list-units --no-legend --plain --state=active,activating,deactivating,reloading,failed flow-*@acme.service flow-*@acme.target flow-*@local-acme-cluster.service flow-*@local-acme-cluster.target flow-*@local-acme-cluster-*.service flow-*@local-acme-cluster-*.target
sudo -n podman rm -f --time 0 --ignore fv_0000000000000002
sudo -n podman network ls --format {{.Name}}
sudo -n rm -rf --one-file-system <tmp>/root/launcher-0
sudo -n podman rm -f --time 0 --ignore fv_0000000000000001
sudo -n podman network ls --format {{.Name}}
sudo -n podman network rm fv_0000000000000001
systemctl --user daemon-reload
sudo -n rm -rf --one-file-system <tmp>/root/platform-0
ip -o link show
sudo -n ip link del vmm-kvm0
ip netns list
sudo -n ip netns del connector-vmm-kvm
ip route show type blackhole
sudo -n ip route del blackhole 192.31.196.240/28 metric 4000
sudo -n podman run --rm --network=host --log-driver=none --read-only --cap-drop=all --cap-add=CAP_NET_ADMIN sha256:0000 boundary remove
sudo -n podman image rm --ignore sha256:0000
docker buildx ls --format {{.Name}}
docker buildx rm connector-vmm-kvm-0
