crates/connector-vmm-tests/tests/snapshots/release__networks_which_cannot_be_listed_are_kept_until_a_retry.snap
---
source: crates/connector-vmm-tests/tests/release.rs
expression: "release_and_retry(&setup, \"125 sudo -n podman network ls\\n\")"
---
status: 1
list: kept
  image sha256:0000
  boundary sha256:0000
  dir <tmp>/root/platform-0
  network fv_0000000000000001
  dir <tmp>/root/launcher-0
  network fv_0000000000000002
--- stderr
sudo -n podman network ls --format {{.Name}}: failing, as the test asks
ci:connector-vmm-kvm: could not tell whether network fv_0000000000000002 exists
ci:connector-vmm-kvm: could not remove network fv_0000000000000002
sudo -n podman network ls --format {{.Name}}: failing, as the test asks
ci:connector-vmm-kvm: could not tell whether network fv_0000000000000001 exists
ci:connector-vmm-kvm: could not remove network fv_0000000000000001
ci:connector-vmm-kvm: kept in <tmp>/root/resources what could not be shown removed, and what it may still use. Put right what failed, then run this task again to release:
  image sha256:0000
  boundary sha256:0000
  dir <tmp>/root/platform-0
  network fv_0000000000000001
  dir <tmp>/root/launcher-0
  network fv_0000000000000002
--- calls
mise run local:stop
  in <tmp>/checkout
systemctl --user list-units --no-legend --plain --state=active,activating,deactivating,reloading,failed flow-*@acme.service flow-*@acme.target flow-*@local-acme-cluster.service flow-*@local-acme-cluster.target flow-*@local-acme-cluster-*.service flow-*@local-acme-cluster-*.target
sudo -n podman rm -f --time 0 --ignore fv_0000000000000002
sudo -n podman network ls --format {{.Name}}
sudo -n podman rm -f --time 0 --ignore fv_0000000000000001
sudo -n podman network ls --format {{.Name}}
systemctl --user daemon-reload
ip -o link show
sudo -n ip link del vmm-kvm0
ip netns list
sudo -n ip netns del connector-vmm-kvm
ip route show type blackhole
sudo -n ip route del blackhole 192.31.196.240/28 metric 4000
docker buildx ls --format {{.Name}}
docker buildx rm connector-vmm-kvm-0
=== retried
status: 0
list: emptied
--- stderr
--- calls
sudo -n podman network ls --format {{.Name}}
sudo -n rm -rf --one-file-system <tmp>/root/launcher-0
sudo -n podman network ls --format {{.Name}}
sudo -n podman network rm fv_0000000000000001
sudo -n rm -rf --one-file-system <tmp>/root/platform-0
sudo -n podman run --rm --network=host --log-driver=none --read-only --cap-drop=all --cap-add=CAP_NET_ADMIN sha256:0000 boundary remove
sudo -n podman image rm --ignore sha256:0000
